<resources>
    <string name="app_name">MusicalStructure</string>

    <!-- Label name for main screen when the Musical Structure app is opened [CHAR LIMIT=20] -->
    <string name="label_app_name">Musical Structure Screen</string>

    <!-- Category name for albums [CHAR LIMIT=20] -->
    <string name="category_albums">Albums</string>

    <!-- Label name for albums screen [CHAR LIMIT=20] -->
    <string name="label_albums">Albums Screen</string>

    <!-- Category name for artists [CHAR LIMIT=20] -->
    <string name="category_artists">Artists</string>

    <!-- Label name for artists screen [CHAR LIMIT=20] -->
    <string name="label_artists">Artists Screen</string>

    <!-- Category name for payment [CHAR LIMIT=20] -->
    <string name="category_payment">Payment</string>

    <!-- Label name for payment screen [CHAR LIMIT=20] -->
    <string name="label_payment">Payment Screen</string>

    <!-- Category name for now playing [CHAR LIMIT=20] -->
    <string name="category_nowplaying">Now Playing Screen</string>

    <!-- Label name for now playing screen [CHAR LIMIT=20] -->
    <string name="label_nowplaying">Now Playing Screen</string>

    <!-- Category name for playlists [CHAR LIMIT=20] -->
    <string name="category_playlists">Playlists</string>

    <!-- Label name for playlists [CHAR LIMIT=20] -->
    <string name="label_playlists">Playlists Screen</string>

    <!-- Category name for podcasts [CHAR LIMIT=20] -->
    <string name="category_podcasts">Podcasts</string>

    <!-- Label name for podcasts [CHAR LIMIT=20] -->
    <string name="label_podcasts">Podcasts Screen</string>

    <!--String for play button -->
    <string name="play">Play</string>

    <!--String for pause button -->
    <string name="pause">Pause</string>

    <!-- Button for previous activity [CHAR LIMIT=20] -->
    <string name="button_previousActivity">Previous Activity</string>

    <!-- Button for next activity [CHAR LIMIT=20] -->
    <string name="button_nextActivity">Next Activity</string>

    <string name="addPayment">Add Payment Method</string>
    <string name="addThreeDSecureCard">Add Source</string>
    <string name="addThreeDSecureCardSync">Add Source Rx</string>
    <string name="paymentMethods">Payment Methods</string>

    <string name="endingIn">Card ending in </string>
    <string name="progressMessage">Creating Token&#8230;</string>
    <string name="validationErrors">Validation Errors</string>

    <string name="createAndroidPayTokens">Create Android Pay Tokens</string>
    <string name="createCardTokens">Create Card Tokens</string>
    <string name="createThreeDSecure">Create 3DS Sources</string>
    <string name="cardNumber">Card Number</string>
    <string name="createSource">Creating source&#8230;</string>
    <string name="confirmPayment">Confirm payment details</string>
    <string name="changeDetails">Change payment details</string>
    <string name="pollingSource">Polling for source changes&#8230;</string>
    <string name="save">Save</string>
    <string name="saverx">Save Rx</string>
    <string name="saveService">Save with Service</string>
    <string name="selectSampleActivity">Select sample activity</string>
    <string name="startPolling">Start polling</string>
    <string name="tryThreeDSecure">Try 3DS</string>
    <string name="verify">Verify</string>
    <string name="updatedSources">Source results</string>
    <string name="cvc">CVC</string>

    <string name="ok">OK</string>

    <string name="label_source_type">Type</string>
    <string name="label_3ds_status">3DS status</string>
    <string name="label_source_state">Status</string>
    <string name="label_source_id">ID Last 6</string>

    <string name="sample_card_requiring_3ds">4000 0000 0000 3063</string>

    <string-array name="currency_array">
        <item>Currency (optional)</item>
        <item>Unspecified</item>
        <item>USD</item>
    </string-array>

    </resources>
